--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rollup": "^0.56.5",
     "rollup-plugin-commonjs": "^9.0.0",
     "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.2.0"
   },
   "author": {
