--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.11.45",
   "description": "A JavaScript / Python / PHP cryptocurrency trading library with support for 90+ exchanges",
   "main": "./ccxt.js",
+  "module":"./ccxt.module.js",
   "unpkg": "build/ccxt.browser.js",
   "engines": {
     "node": ">=7.6.0"
